add book sample

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,56 @@
     <title></title>
     <link rel="stylesheet" href="assets/css/font.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/toc.css">
+    <link rel="stylesheet" href="assets/css/atogaki.css">
   </head>
   <body>
+    <section class="firstpage">
+      <h2>本！</h2>
+      <h1>第一巻</h1>
+      <div class="information_cont">
+        <div class="information">
+          <p class="title">著</p>
+          <p>ごとうゆうた</p>
+        </div>
+        <div class="information">
+          <p class="title">表紙イラスト・デザイン</p>
+          <p>ごとうゆうた</p>
+        </div>
+      </div>
+    </section>
+    <section class="TOC">
+      <ul>
+        <li>
+          <div class="index_item">
+            <figure class="image">
+              <img alt='icon' src='assets/images/yougoto.png' class='avatar'/>
+            </figure>
+            <div class="text">
+              <h2>これはつよい</h2>
+              <p class="author">ごとうゆうた</p><span class='page'>3</span>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
     <!-- build:section recursive views -->
     <!-- /build -->
+    <section class="atogaki">
+      <div class="atogaki_item">
+        <figure class="image">
+          <img alt='icon' src='assets/images/yougoto.png' class='avatar'/>
+        </figure>
+        <div class="text">
+          <p class="info">
+            <span class="name">ごとうゆうた</span>
+            <span class="role label">Chap1執筆</span>
+          </p>
+          <p class="comment">
+            これはつよい
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
